[package]
name = "nonneg-float"
version = "0.1.0"
edition = "2024"
authors = ["Mart <mordecaiemmanueletukudo@gmail.com>"]
description = "A generic NonNegative float wrapper with compile-time checked macro."
license = "MIT OR Apache-2.0"
repository = "https://github.com/martcpp/nonneg-float.git"

[dependencies]
num-traits = "0.2"